--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=board
 #DATABASE
 spring.h2.console.enabled=true
 spring.h2.path=/h2-console
-spring.datasource.url=jdbc:h2:~/local
+spring.datasource.url=jdbc:h2:~/board
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,3 +11,5 @@ spring.datasource.password=
 #JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
